rolled back to get(0) as getFirst() ruining my pipeline